[project]
name = "incident-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for Incident Tracker"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "dynaconf>=3.2.0",
    "watchdog>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]